``` feat(api): 更新翻译接口请求参数及响应结构
- 将请求体中的 `proxy` 字段保留，新增 `keyword` 字段用于权限校验
- 修改响应体中 `msg` 字段由字符串改为对象，包含详细的 IP 检测信息
- 调整 README 中的接口文档与实际结构一致
- 更新 curl 示例和环境变量配置，将关键词从 `abracadabra` 改为 `Alohomora`
- 修改服务监听端口从 6380 为 6381
- 支持通过环境变量 `keyword` 配置访问密钥
- 日志输出运行环境（容器或主机）并调整数据存储路径逻辑
```

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,4 +10,4 @@ services:
       - ./log:/log
       - ./data:/data
     environment:
-      - abracadabra=abracadabra
+      - keyword=Alohomora # 这里设置的关键词代表每次网络请求要带的参数 参数一致才会提供翻译服务 防止服务被滥用
